--- a/css/main.css
+++ b/css/main.css
@@ -772,3 +772,10 @@ td.gutter {
   font-style: italic;
   font-size: 16px;
 }
+
+@font-face {
+  font-family: 'CarbonType';
+  src: url('CarbonType.eot?#iefix') format('embedded-opentype'),  url('CarbonType.woff') format('woff'), url('CarbonType.ttf')  format('truetype'), url('CarbonType.svg#CarbonType') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
