added css in post.html

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,6 +12,15 @@ function googleTranslateElementInit() {
   new google.translate.TranslateElement({pageLanguage: 'en', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
 }
 </script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+<style type='text/css'>
+
+@font-face {
+  font-family: 'CarbonType';
+  src: url('/css/CarbonType.eot?#iefix') format('embedded-opentype'),  url('/css/CarbonType.woff') format('woff'), url('/css/CarbonType.ttf')  format('truetype'), url('/css/CarbonType.svg#CarbonType') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+</style>
 <div class="container">
   <div class="row">
     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
