--- a/_includes/head.html
+++ b/_includes/head.html
@@ -121,4 +121,13 @@
   {% include matomo.html %}
   {% endif %}
 {% include analytics.html %}
+<style type='text/css'>
+
+@font-face {
+  font-family: 'CarbonType';
+  src: url('/css/CarbonType.eot?#iefix') format('embedded-opentype'),  url('/css/CarbonType.woff') format('woff'), url('/css/CarbonType.ttf')  format('truetype'), url('/css/CarbonType.svg#CarbonType') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+</style>
 </head>
