--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,7 @@ p {
   margin: 30px 0;
 }
 h1,h2,h3,h4,h5,h6 {
-  font-family: 'CarbonType','Open Sans','Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'GroteskLight','Open Sans','Helvetica Neue', Helvetica, Arial, sans-serif;
   font-weight: 800;
 }
 a {
@@ -351,7 +351,7 @@ footer .theme-by {
   margin: 0 0 10px;
 }
 .post-preview .post-entry {
-  font-family: 'CarbonType' ,'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'GroteskLight' ,'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 .post-entry-container {
   display: inline-block;
