--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,9 @@ layout: null
 
 body {
   font-family: 'Lora', 'Times New Roman', serif;
+  font-variant-ligatures: no-common-ligatures;
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+  -webkit-font-smoothing: antialiased;
   font-size: 18px;
   color: #404040;
   position: relative;
@@ -776,3 +779,4 @@ td.gutter {
 .blog-post{
   font-family: 'GroteskLight' !important;
 }
+
