--- a/css/main.css
+++ b/css/main.css
@@ -21,12 +21,16 @@ body {
   {% endif %}
 }
 p {
+  font-family: 'GroteskLight';
   line-height: 1.5;
   margin: 30px 0;
+  letter-spacing: 0.119em;
+  font-weight: 100;
 }
 h1,h2,h3,h4,h5,h6 {
   font-family: 'GroteskLight','Open Sans','Helvetica Neue', Helvetica, Arial, sans-serif;
-  font-weight: 800;
+  font-weight: 700;
+  letter-spacing: 0.119em;
 }
 a {
   color: {{ site.link-col }};
