--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,10 @@ layout: null
 @import url("pygment_highlights.css");
 
 /* --- General --- */
-
+@font-face {
+  font-family: "GroteskLight";
+  src: url("/arm/css/GroteskLight.ttf") format("truetype");
+}
 body {
   font-family: 'Lora', 'Times New Roman', serif;
   font-variant-ligatures: no-common-ligatures;
@@ -26,6 +29,7 @@ p {
   margin: 30px 0;
   letter-spacing: 0.119em;
   font-weight: 100;
+  color: #1b2733;
 }
 h1,h2,h3,h4,h5,h6 {
   font-family: 'GroteskLight','Open Sans','Helvetica Neue', Helvetica, Arial, sans-serif;
