--- a/css/main.css
+++ b/css/main.css
@@ -40,6 +40,15 @@ li {
   font-weight: 100;
   color: #1b2733;
 }
+code {
+  font-family: 'GroteskLight';
+  line-height: 1.5;
+  margin: 30px 0;
+  letter-spacing: 0.119em;
+  font-weight: 100;
+  color: #1b2733;
+}
+
 h1,h2,h3,h4,h5,h6 {
   font-family: 'GroteskLight','Open Sans','Helvetica Neue', Helvetica, Arial, sans-serif;
   font-weight: 700;
